# stock_market_prediction

./: .env.example  .gitignore  README.md  Steps.odt  Stock_File.odt  Wealth_Final.odt  app.py  config.py  install_and_run.sh  prediction_models.py  pyproject.toml  requirements.txt  run.sh  setup.sh  stock_data.py  streamlit_app.py  styles.py  technical_analysis.py  wealth.py  wealth_calculator.py
src/: __init__.py
src/cli/: __init__.py  main.py
src/config/: __init__.py  settings.py
src/data/: __init__.py  collector.py  preprocessor.py  technical_indicators.py
src/models/: __init__.py  advanced_model.py  base_model.py  ensemble_model.py  investment_advisor.py  lstm_model.py  model_evaluator.py  random_forest_model.py  xgboost_model.py
src/utils/: __init__.py  helpers.py  logger.py
